# beh_model

./: .gitignore  GLM.py  config.py  create_behaviour_dataset.py  data_utils.py  fit_global_glm.py  fit_global_glmhmm.py  fit_global_glmhmm_parallel.py  fit_single_mouse_glmhmm.py  fit_single_mouse_glmhmm_parallel.py  glm_utils.py  multicollinearity_utils.py  plot_glmhmm_results.py  plotting_utils.py  pyproject.toml  requirements.txt  run_pipeline (3).py  run_pipeline (4).py  run_pipeline.py  utils.py
notebooks/: plot_global_model_performance.ipynb  plot_global_model_performance_time_new.ipynb  plot_model_loglikelihood.ipynb  plot_model_performance.ipynb  plot_single_mouse_model_performance.ipynb  plot_single_mouse_model_performance_states.ipynb  plot_single_mouse_model_performance_weights_new.ipynb  plot_single_mouse_model_time_performance.ipynb
notebooks/.ipynb_checkpoints/: plot_global_model_performance_time-checkpoint.ipynb  plot_global_model_performance_time_new-checkpoint.ipynb  plot_model_performance-checkpoint.ipynb  plot_single_mouse_model_performance-checkpoint.ipynb  plot_single_mouse_model_performance_states-checkpoint.ipynb
