[tool.poetry]
name = "beh-model"
version = "0.1.0"
description = ""
authors = ["abisi <axel.bisi@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.17.1"
pynwb = "^3.1.3"
matplotlib = "^3.10.8"
scikit-learn = "^1.8.0"
openpyxl = "^3.1.5"
tqdm = "^4.67.3"
autograd = "^1.8.0"
numba = "==0.64.0"
tables = "==3.11.1"
seaborn = "==0.13.2"
pyarrow = "^23.0.1"
fastparquet = "^2025.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
